--- a/front/src/my-projects.html
+++ b/front/src/my-projects.html
@@ -434,8 +434,8 @@
 		        <h1>Diplomacy</h1>
                  <div><my-svg src="../public/images/Projet/diplomacy.svg" width="25%" height="25%"></my-svg></div>
             </div>
-            <p> Le projet Diplomacy consistait à créer un jeu de stratégie. (Guerre de territoire). On devait réaliser une application Java, jouable en multijoueur et qui permettrait à chacun de donner des ordres d'attaques ou de défenses sur des pays sur un tour donnée. 
-			 Puis (A la fin du tour = Quand tous le monde a validé ses ordres), un algorithme exécuterai les ordres données en répondant si l'attaque à réussie ou si la défense à réussie. Comme pour les précédents projets. Vous trouverez les documents que nous avons produits ci-dessous : <br/>
+            <p> Le projet Diplomacy consistait à créer un jeu de stratégie. (<b>Guerre de territoire</b>). On devait réaliser une application Java, <b>jouable en multijoueur</b> et qui permettrait à chacun de donner des ordres d'attaques ou de défenses sur des pays sur un tour donnée. 
+			 Puis (A la fin du tour = Quand tous le monde a validé ses ordres), un <b>algorithme</b> exécuterai les ordres données en répondant si l'attaque à réussie ou si la défense à réussie. Comme pour les précédents projets. Vous trouverez les documents que nous avons produits ci-dessous : <br/>
 			 <div class="center">
 				<div class="flipCard">
 					<flip-card axis="x">
@@ -533,7 +533,7 @@
 		        <h1> Bomberman </h1>
                  <div><my-svg src="../public/images/Projet/bomberman.svg" width="25%" height="25%"></my-svg></div>
             </div>
-            <p>Alors, c'est un peu le projet dont je me sers pour <b>tester</b> toutes les technologies dont j'ai envie. Je l'ai crée une fois en <b>langage C </b>(Premier tutoriel que j'ai suivi). J'ai ensuite choisi de refaire une fois le jeu mais cette fois en <b>Java<b> et en <b>réseau</b>(Pour augmenter
+            <p>Alors, c'est un peu le projet dont je me sers pour <b>tester</b> toutes les technologies dont j'ai envie. Je l'ai crée une fois en <b>langage C </b>(Premier tutoriel que j'ai suivi). J'ai ensuite choisi de refaire une fois le jeu mais cette fois en <b>Java</b> et en <b>réseau</b>(Pour augmenter
 			mes compétences en gestion de thread et synchronisation. Serialisation d'objet...etc) et depuis peu j'ai repris le projet mais cette fois-ci en <b>langage WEB</b> (NodeJS pour la partie serveur) et du JavaScript pur pour la partie client. Même si c'est quelquechose que j'ai
 			jamais réussi à aboutir. C'est quand même ce projet qui m'a permis de <b>comprendre des concepts</b> assez avancé dans tous les langages que j'ai cité. Je vais maintenant mettre une suite d'écrans pour illustrer mes propos : <br/></p>
 		</div>
