--- a/front/src/my-app.html
+++ b/front/src/my-app.html
@@ -35,7 +35,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         --app-secondary-color: black;
       }
 
-      app-header {
+      app-header, footer {
         color: #F8F0C2;
 		background-image: url('../public/images/backgroundDrawer.jpg');
         background-size: cover;
