Petite modif d'orthographe

--- a/front/src/my-skills.html
+++ b/front/src/my-skills.html
@@ -78,7 +78,7 @@
 			<div class="center"><h2>Le JAVA</h2></div>
 			<div class="center"><my-svg src="../public/images/Skills/LangagesProg/java.svg" width="25%" height="25%"></my-svg></div>
 			<p> Le java est le langage que j'ai le plus utilisé, c'est le langage que j'ai le plus appronfondie car c'était le support de mon D.U.T Informatique. Pendant les 2 années de formation, 
-			le langage JAVA était au coeur de quasimment tous les modules de programmation. J'ai notamment appris le <b>Polymorphisme</b> ou encore le fait de <b>sérialiser/désérialiser</b> des objets.</p>
+			le langage JAVA était au coeur de quasiment tous les modules de programmation. J'ai notamment appris le <b>Polymorphisme</b> ou encore le fait de <b>sérialiser/désérialiser</b> des objets.</p>
 			<div class="center"><h2>Le C</h2></div>
 			<div class="center"><my-svg src="../public/images/Skills/LangagesProg/c.svg" width="25%" height="25%"></my-svg></div>
 			<p> Ce langage est le premier que j'ai appris, via le tutoriel du <b>Site du Zéro</b> (qui s'appelle aujoud'hui OpenClassRoom). 
@@ -125,7 +125,7 @@
 			C'est ma découverte de cette année je pense (niveau éditeur).</p>
 			<div class="center"><h2> NotePad++ </h2></div>
 			<div class="center"><my-svg src="../public/images/Skills/Editeurs/notepad.svg" width="25%" height="25%"></my-svg></div>
-			<p>Je vais pas détailler cet outil, c'est la BASE !!! Je m'en sert <b>toujours aujourd'hui</b> et ce, de façon régulière.</p>
+			<p>Je ne vais pas détailler cet outil, c'est la BASE !!! Je m'en sers <b>toujours aujourd'hui</b> et ce, de façon régulière.</p>
 			<div class="center"><h2> SublimeText </h2></div>
 			<div class="center"><my-svg src="../public/images/Skills/Editeurs/sublimetext.svg" width="25%" height="25%"></my-svg></div>
 			<p>C'est un éditeur que <b>je n'aime pas trop</b>, je m'en suis servi parce qu'il donnait une vue globale sur les dossiers avec ce qu'il y a dedans. Mais maintenant que Brackets existe je ne pense plus m'en servir.</p>
